<resources>

    <!--通用-->
    <string name="error_overtime">连接超时</string>
    <string name="error_network">网络异常</string>
    <string name="error_permission">权限错误</string>
    <string name="error_parse">解析异常</string>
    <string name="error_unknow">未知的错误</string>
    <string name="error_connect">无法连接到服务器，请检查网络</string>
    <string name="universal_empty">暂无更多内容</string>

    <string name="MainActivity_title_1">找车</string>
    <string name="MainActivity_title_2">订单</string>
    <string name="MainActivity_title_3">我</string>

    <string name="app_name">农好运商户端</string>
    <string name="loding_">正在上传中...</string>
    <string name="loding">正在加载中...</string>
    <string name="dialog_get_camera">拍照</string>
    <string name="dialog_get_album">从相册选择</string>
    <string name="dialog_get_local_album">从本地图库选择</string>
    <string name="no_camera">没有相机或相机功能关闭</string>
    <string name="check_big_pic">查看大图</string>
    <string name="i_am_shang_shu">我是市场内商户</string>
    <string name="i_am_farmer">我是农产品采购商</string>
    <string name="register">注册</string>
    <string name="phone_login">手机号快捷登录</string>
    <string name="phone_register">手机号快捷注册</string>
    <string name="phone">手机号</string>
    <string name="phone_hint">请输入11位手机号</string>
    <string name="nick_name">姓\u0020\u0020\u0020\u0020名</string>
    <string name="nick_name_hint">请输入姓名</string>
    <string name="next">下一步</string>
    <string name="login_nhy">登录农好运</string>
    <string name="login">登录</string>
    <string name="yan_zheng_ma">验证码</string>
    <string name="password">密\u0020\u0020\u0020\u0020码</string>
    <string name="yan_zheng_ma_hint">请输入验证码</string>
    <string name="password_hint">请输入密码</string>
    <string name="get_again">重新获取</string>
    <string name="tou_xiang">头像</string>
    <string name="ni_cheng">姓名</string>
    <string name="sex">性别</string>
    <string name="mobile_phone">电话号码</string>
    <string name="dan_wei_name">单位名称</string>
    <string name="address">地址</string>
    <string name="pu_wei_number">铺位号</string>
    <string name="write_ni_cheng">请填写昵称</string>
    <string name="write_sex">请选择性别</string>
    <string name="write_m_phone">请填写电话号码</string>
    <string name="write_d_name">请填写单位名称</string>
    <string name="write_d__name">请填写单位名称</string>
    <string name="write_address">请填写完整地址</string>
    <string name="write__address">请填写完整地址</string>
    <string name="write_p_number">请填写铺位号</string>
    <string name="write_p__number">请填写铺位号</string>
    <string name="edit_personal_data">编辑个人资料</string>
    <string name="save">保存</string>

    <string name="find_out">找车</string>
    <string name="order_out">订单</string>
    <string name="news_out">发现</string>
    <string name="personal_out">我</string>

    <string name="all_order">所有订单</string>
    <string name="normal_address">常用地址</string>
    <string name="current_points">当前积分</string>
    <string name="ren_zheng">认证</string>
    <string name="y_y_z_z">营业执照</string>
    <string name="s_m_r_z">实名认证</string>
    <string name="z_f_y_z">支付验证</string>
    <string name="y_y_z_z_">场内商户/采购商工商营业执照扫描件上传</string>
    <string name="s_m_r_z_">公安机关核发的身份证上传</string>
    <string name="z_f_y_z_">已通过微信支付认证</string>
    <string name="already_pass">已认证</string>
    <string name="no_pass">未通过</string>
    <string name="checking">待审核</string>
    <string name="un_check">未通过</string>
    <string name="un_upload">未上传</string>
    <string name="un_checkd">未认证</string>
    <string name="upload">上传认证</string>
    <string name="order_all">待接单</string>
    <string name="order_server">服务中</string>
    <string name="order_discuss">待评价</string>
    <string name="order_finished">已完成</string>
    <string name="order_complain">申诉中</string>
    <string name="order_cancle">已取消</string>
    <string name="order_over_time">已超时</string>
    <string name="null_this_type_order">您还没有此类订单，快去下单吧</string>
    <string name="null_this_net">暂无可用的车</string>
    <string name="refresh_on_time">立即刷新</string>
    <string name="use_car_on_time">立即用车</string>
    <string name="shen_su">我要申诉</string>
    <string name="order_again">再次下单</string>
    <string name="order_confirm">确认完成</string>
    <string name="big_car">场外配送</string>
    <string name="small_car">小货车</string>
    <string name="insideSmallCar">场内短驳</string>
    <string name="insideChaCar">场内叉车</string>
    <string name="qi_bu_fei">起步费</string>
    <string name="please_input_address">请输入地址/门牌号</string>
    <string name="i_call_car">我要叫车</string>
    <string name="order_details">订单信息</string>
    <string name="use_car_time">用车时间</string>
    <string name="other_server">额外服务</string>
    <string name="order_bei_zhu">订单备注</string>
    <string name="begin_d">始 发 地</string>
    <string name="pass_d">途 经 地</string>
    <string name="target_d">目 的 地</string>
    <string name="cancle_reason">取消原因</string>
    <string name="now">现在</string>
    <string name="today">今天</string>
    <string name="tomorrow">明天</string>
    <string name="click_update">点击修改</string>
    <string name="w_s_order_data">完善订单信息</string>
    <string name="used_road">常用路线</string>
    <string name="gu_jia">请按卸货顺序填写以便估计价格(长按删除)</string>
    <string name="please_input_termini">请输入目的地</string>
    <string name="please_input_tu_jing_di">请输入途径地</string>
    <string name="extra_service">额外服务</string>
    <string name="base_service">基础服务</string>
    <string name="extra__service">装卸、回单回款等服务</string>
    <string name="shao_hua">给司机捎句话</string>
    <string name="shao__hua">货物类型、特殊情况</string>
    <string name="shao_hua_content">请填写特殊情况，例如：一张床两个柜子、500公斤生鲜</string>
    <string name="ok">确认</string>
    <string name="perfect_road_info">请完善您的路线信息</string>
    <string name="need_xie_zhuang">需要装卸</string>
    <string name="need_hui_dan">需带回单</string>
    <string name="need_hui_kuan">需带回款</string>
    <string name="free">(免费)</string>
    <string name="yi_jia">(与司机议价)</string>
    <string name="hui_dan_shuo_ming">回单、回款详细说明</string>
    <string name="shou_qi">收起</string>
    <string name="cha_kan">查看</string>
    <string name="money">金额</string>
    <string name="the_most_money">最高10000元</string>
    <string name="kao_lao_si_ji">加点劳务费犒劳下司机吧>></string>
    <string name="other_cost">其他费用</string>
    <string name="add_lao_wu_fei">加劳务费</string>
    <string name="si_ji_xiao_fei">司机劳务费</string>
    <string name="kao_lao_si_ji_xiao_fei">如装卸费、等候费</string>
    <string name="bao_z_j">保证金</string>
    <string name="suggest_money">(建议运费)</string>
    <string name="bao_zheng_jing_all">保证金为本次您支付给农好运平台的运费担保：</string>
    <string name="bao_zheng_jing_one">1、如交易不成功，保证金将于24小时内全额退还至您付款账户</string>
    <string name="bao_zheng_jing_two">2、交易正常完成，农好运将退还您保证金多余部分</string>
    <string name="shi_ji_money">实际愿支付</string>
    <string name="shi_ji_money_cost_all">实际发生金额为您愿意支付的金额，交易完成后，农好运将退还您保证金多余部分</string>
    <string name="zhi_fu_way">在结算时您可以使用以下支付方式</string>
    <string name="wei_xin_z_f">微信支付</string>
    <string name="zhi_fu_bao_z_f">支付宝支付</string>
    <string name="tui_jian">推荐</string>
    <string name="xia_dan">立即下单</string>
    <string name="order_ok">订单确认</string>
    <string name="details_address">请补充目的地完整地址如门牌号</string>
    <string name="personal_name">请输入发货人姓名(必填)</string>
    <string name="personal_shou_name">请输入收货人姓名(必填)</string>
    <string name="contact_phone">请输入联系电话(必填)</string>
    <string name="ship_info">发货信息</string>
    <string name="ship_info2">收货信息</string>
    <string name="switch_earth_address">切换地图选点</string>
    <string name="input_begin_d">请输入始发地</string>
    <string name="input_target_d">请输入目的地</string>
    <string name="exit">退出登录</string>
    <string name="free_">免费</string>
    <string name="sending">派单中</string>
    <string name="cancle_order">取消订单</string>
    <string name="toast">温馨提示:离开本页面,您可以在订单页面中看到该订单的状态,并进行订单操作。</string>
    <string name="wait_get_order">等待司机接单</string>
    <string name="toast_">倒计时5分钟，请保持手机通畅并耐心等待司机与您联系</string>
    <string name="call_friends">拨打电话</string>
    <string name="bo_da">拨打</string>
    <string name="cancel">取消</string>
    <string name="tiJi">体积(立方)</string>
    <string name="hint_tiJi">体积为立方</string>
    <string name="hint_weight">重量为公斤</string>
    <string name="weight">重量(公斤)</string>
    <string name="confirm">确定</string>
    <string name="self_reason">本人原因</string>
    <string name="driver_reason">司机原因</string>
    <string name="all_no">补充说明</string>
    <string name="driver_discuss">说说对司机的印象吧</string>
    <string name="driver_star">要给司机一个评分后才能评价哦</string>
    <string name="discusses">评价</string>
    <string name="want_discusses">我要评价</string>
    <string name="waitting_cancle_ti_shi">取消订单后您支付的押金将于24小时返回给您，是否确认取消？</string>
    <string name="cancle_ti_shi">司机已接单，他已开始为您服务，如果对方不同意取消则可能会进入申诉状态并会产生部分费用，您是否继续？</string>
    <string name="true_name">真实姓名：</string>
    <string name="id_card">身份证号：</string>
    <string name="input_name">填写姓名</string>
    <string name="input_id_card">填写18位身份证号</string>
    <string name="upload_front_id_card">上传身份证正面</string>
    <string name="upload_pros_id_card">上传身份证反面</string>
    <string name="submit_check">提交审核</string>
    <string name="cancel_wait_order">已超过5分钟没有司机接单，继续等待还是取消该订单？</string>
    <string name="please_input_true_name">请填写真实姓名</string>
    <string name="please_input_18_id_card">请填写18位身份证号</string>
    <string name="please_upload_id_card">请上传身份证正反面照片</string>
    <string name="me_to_driver_comment">我对司机的评价</string>
    <string name="driver_to_me_comment">司机对我的评价</string>
    <string name="order_cancel_resaon">订单已取消，原因如下：</string>
    <string name="agree_cancel">同意取消</string>
    <string name="disagree_cancel">不同意取消</string>
    <string name="submit">提交</string>
    <string name="please_permission_loaction_loaction">请授权定位，读写手机存储权限</string>
    <string name="please_permission_camera_loaction">请授权相机（拍照、录像和闪光灯）权限</string>

</resources>
