<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    style="@style/normal_weight_vertical"
    android:gravity="center|top"
    android:background="@color/register_one">

    <LinearLayout
        android:id="@+id/linearClude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/includer_header"/>

        <View style="@style/ZddddddLineStyle"/>
    </LinearLayout>

    <TextView
        android:id="@+id/text_type"
        android:layout_marginTop="13dp"
        android:layout_marginLeft="12dp"
        android:layout_width="match_parent"
        android:text="@string/phone_register"
        android:textSize="14sp"
        android:gravity="left"
        android:textColor="@color/zc3ccc4"
        android:layout_height="wrap_content" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="9dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:background="@drawable/rectangle_input_phone_corner_bg"
        android:orientation="horizontal"
        android:gravity="center|left"
        android:layout_height="50dp">
        <TextView
            android:layout_width="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/register_one_shuo_ming"
            android:text="@string/phone"
            android:layout_marginLeft="9dp"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/editPhone"
            android:layout_width="match_parent"
            android:textSize="16sp"
            android:textColor="@color/register_one_shuo_ming"
            android:textColorHint="@color/zc3ccc4"
            android:hint="@string/phone_hint"
            android:background="@null"
            android:layout_marginLeft="13dp"
            android:layout_marginRight="13dp"
            android:maxLength="11"
            android:inputType="number"
            android:gravity="center|left"
            android:textCursorDrawable="@null"
            android:layout_height="match_parent" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="9dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:background="@drawable/rectangle_input_phone_corner_bg"
        android:orientation="horizontal"
        android:gravity="center|left"
        android:layout_height="50dp">
        <TextView
            android:layout_width="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/register_one_shuo_ming"
            android:text="@string/password"
            android:layout_marginLeft="9dp"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/editPassWord"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="16sp"
            android:textColor="@color/register_one_shuo_ming"
            android:textColorHint="@color/zc3ccc4"
            android:hint="@string/password_hint"
            android:background="@null"
            android:layout_marginLeft="13dp"
            android:layout_marginRight="13dp"
            android:maxLength="11"
            android:inputType="textPassword"
            android:gravity="center|left"
            android:textCursorDrawable="@null"
            android:layout_height="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="9dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:background="@drawable/rectangle_input_phone_corner_bg"
        android:orientation="horizontal"
        android:gravity="center|left"
        android:layout_height="50dp">
        <TextView
            android:layout_width="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/register_one_shuo_ming"
            android:text="@string/nick_name"
            android:layout_marginLeft="9dp"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/editNickName"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="16sp"
            android:textColor="@color/register_one_shuo_ming"
            android:textColorHint="@color/zc3ccc4"
            android:hint="@string/nick_name_hint"
            android:background="@null"
            android:layout_marginLeft="13dp"
            android:layout_marginRight="13dp"
            android:maxLength="11"
            android:inputType="text"
            android:gravity="center|left"
            android:textCursorDrawable="@null"
            android:layout_height="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="9dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:background="@drawable/rectangle_input_phone_corner_bg"
        android:orientation="horizontal"
        android:gravity="center|left"
        android:layout_height="50dp">
        <TextView
            android:layout_width="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/register_one_shuo_ming"
            android:text="@string/yan_zheng_ma"
            android:layout_marginLeft="9dp"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/editIdentifyingCode"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="16sp"
            android:textColor="@color/register_one_shuo_ming"
            android:textColorHint="@color/zc3ccc4"
            android:hint="@string/yan_zheng_ma_hint"
            android:background="@null"
            android:layout_marginLeft="13dp"
            android:layout_marginRight="13dp"
            android:maxLength="11"
            android:inputType="number"
            android:gravity="center|left"
            android:textCursorDrawable="@null"
            android:layout_height="match_parent" />
        <TextView
            android:id="@+id/text_get_verification_code"
            android:layout_width="76dp"
            android:layout_height="33dp"
            android:clickable="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="24px"
            android:background="@drawable/rectangle_yzm_corner_bg"
            android:gravity="center"
            android:text="获取验证码"
            android:textColor="@android:color/holo_red_light"
            android:textSize="14sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/textRegister"
        android:layout_width="match_parent"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="9dp"
        android:gravity="center"
        android:clickable="true"
        android:textColor="@color/white"
        android:text="@string/register"
        android:textSize="18sp"
        android:background="@drawable/rectangle_register_phone_lv_corner_bg"
        android:layout_height="50dp" />

</LinearLayout>

